src/test/resources/de/feu/ps/bridges/serialization/semantic_errors/column_too_small.bgs
FIELD
11 x 8 | 2

ISLANDS
( -1, 0 | 1 )
( -1, 5 | 1 )

BRIDGES
( 0, 1 | false )
